# maxxecu-can-simulator

./: .gitignore  CMakeLists.txt  README.md
scripts/: stop_can.sh
src/: canbus.cpp  canbus.h  main.cpp  simulator.cpp  simulator.h
