cmake_minimum_required(VERSION 3.10)

project(maxxecu_can_simulator)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_compile_options(
    -Wall
    -Wextra
)

add_executable(maxxecu_can_simulator
    src/main.cpp
    src/canbus.cpp
)

target_include_directories(maxxecu_can_simulator PRIVATE
    src
)
